--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "url": "git+https://github.com/danm/image-hash.git"
   },
   "keywords": [
-    "phash", "hash", "image hash", "perceptual hash"
+    "phash",
+    "hash",
+    "image hash",
+    "perceptual hash"
   ],
   "author": "Daniel Morrison <daniel.morrison@bbc.co.uk>",
   "license": "MIT",
@@ -20,6 +23,7 @@
   },
   "homepage": "https://github.com/danm/image-hash#readme",
   "dependencies": {
+    "file-type": "^8.0.0",
     "jpeg-js": "^0.2.0",
     "request": "^2.81.0"
   }
