--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "image-hash",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "description": "Create a hash from an image",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -23,13 +23,16 @@
   },
   "homepage": "https://github.com/danm/image-hash#readme",
   "dependencies": {
+    "file-type": "^9.0.0",
     "jpeg-js": "^0.2.0",
     "pngjs": "^3.3.3",
     "request": "^2.81.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
     "eslint": "^5.6.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0"
+    "eslint-plugin-import": "^2.14.0",
+    "mocha": "^5.2.0"
   }
 }
