--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "image-hash",
-  "version": "2.0.0",
+  "version": "3.1.0",
   "description": "Create a hash from an image",
-  "main": "index.js",
+  "main": "lib/imageHash.js",
+  "types": "lib/imageHash.d.ts",
   "scripts": {
-    "test": "mocha"
+    "test": "jest",
+    "build": "tsc"
   },
+  "files": [
+    "lib"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/danm/image-hash.git"
@@ -29,10 +34,20 @@
     "request": "^2.81.0"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "mocha": "^5.2.0"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-typescript": "^7.1.0",
+    "@babel/runtime": "^7.3.1",
+    "@types/jest": "^24.0.12",
+    "@types/node": "^11.13.8",
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "@typescript-eslint/parser": "^1.7.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-typescript": "^3.0.0",
+    "eslint-plugin-import": "^2.17.2",
+    "jest": "^24.0.0",
+    "typescript": "^3.3.1"
   }
 }
