--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,37 +4,18 @@
 #
 version: 2
 
-defaults: &defaults
-  working_directory: ~/repo
-  docker:
-    - image: circleci/node:latest
-
 jobs:
   test:
-    <<: *defaults
+    working_directory: ~/repo
+    docker:
+      - image: circleci/node:latest
     steps:
       - checkout
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          - v1-dependencies-
-      - run: npm install
-      - run:
-          name: Run tests
-          command: npm test
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-      - persist_to_workspace:
-          root: ~/repo
-          paths: .
+      - run: npm ci
+      - run: npm test
 
 workflows:
   version: 2
-  test-deploy:
+  justtest:
     jobs:
-      - test:
-          filters:
-            tags:
-              only: /^v.*/
+      - test
