--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,9 @@ jobs:
       - checkout
       - run: npm ci
       - run: npm test
-      - run: npm version patch
-      - run: npm run build
       - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+      - run: npm version patch --no-git-tag-version
+      - run: npm run build
       - run: npm publish
 workflows:
   version: 2
