--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/danm/image-hash#readme",
   "dependencies": {
+    "@cwasm/webp": "^0.1.5",
     "file-type": "^14.6.2",
     "jpeg-js": "^0.4.0",
     "pngjs": "^3.3.3",
