--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "image-hash",
-  "version": "5.1.0`",
+  "version": "5.1.0",
   "description": "Create a hash from an image",
   "main": "lib/imageHash.js",
   "types": "lib/imageHash.d.ts",
