--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   "homepage": "https://github.com/danm/image-hash#readme",
   "dependencies": {
     "@cwasm/webp": "^0.1.5",
-    "file-type": "^14.6.2",
+    "file-type": "^16.5.3",
     "jpeg-js": "^0.4.0",
-    "pngjs": "^3.3.3",
+    "pngjs": "^6.0.0",
     "request": "^2.81.0"
   },
   "devDependencies": {
@@ -53,6 +53,8 @@
     "eslint-plugin-import": "^2.25.4",
     "mocha": "^9.0.0",
     "ts-node": "^8.10.2",
-    "typescript": "^3.3.1"
+    "typescript": "^3.3.1",
+    "@types/pngjs": "^6.0.1"
+
   }
 }
