--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
       ["@babel/preset-env", {"targets": {"node": "current"}}],
-      "@babel/preset-typescript",
+      "@babel/preset-typescript"
   ],
   "plugins": [
     "@babel/plugin-transform-modules-commonjs"
