--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,7 @@
         "sourceMap": true,
         "outDir": "lib",
         "baseUrl": ".",
-        "paths": {
-            "*": [
-                "node_modules/*",
-            ]
-        },
+        "noImplicitAny": true
     },
     "include": [
         "src/**/*"
