--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "image-hash",
-  "version": "5.3.0",
+  "version": "6.0.0",
   "description": "Create a hash from an image",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "npx mocha -r ts-node/register __tests__/*.test.ts ",
-    "build": "tsc",
+    "test": "jest __tests__/*.test.ts",
+    "coverage": "npm run test -- --coverage && typescript-coverage-report",
+    "build": "tsup --config ./tsup.config.ts",
     "lint": "eslint src/*.ts",
     "lint:fix": "eslint src/*.ts --fix"
   },
@@ -33,28 +34,26 @@
     "@cwasm/webp": "^0.1.5",
     "file-type": "^16.5.3",
     "jpeg-js": "^0.4.0",
-    "pngjs": "^6.0.0",
-    "request": "^2.81.0"
+    "mocha": "^10.2.0",
+    "pngjs": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-typescript": "^7.1.0",
-    "@babel/runtime": "^7.3.1",
-    "@types/chai": "^4.2.12",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^11.13.8",
-    "chai": "^4.2.0",
+    "@types/chai": "^4.3.4",
+    "@types/eslint": "^8.4.10",
+    "@types/jest": "^29.2.5",
+    "@types/mocha": "^10.0.1",
+    "@types/pngjs": "^6.0.1",
+    "@types/request": "^2.48.8",
+    "chai": "^4.3.7",
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-plugin-import": "^2.25.4",
-    "mocha": "^9.0.0",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.3.1",
-    "@types/pngjs": "^6.0.1"
-
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.4",
+    "typescript-coverage-report": "^0.7.0"
   }
 }
