--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ts-node": "^10.9.1",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4",
-    "typescript-coverage-report": "^0.7.0"
+    "typescript-coverage-report": "^0.7.0",
+    "whatwg-fetch": "^3.6.2"
   }
 }
