fix: ensure build is run on github install

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
+    "prepare": "npm run build -s",
     "test": "jest __tests__/*.test.ts",
     "coverage": "npm run test -- --coverage && typescript-coverage-report",
     "build": "tsup --config ./tsup.config.ts",
