--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "prepare": "npm run build -s",
-    "test": "jest __tests__/*.test.ts",
+    "test": "vitest __tests__/*.test.ts",
     "coverage": "npm run test -- --coverage && typescript-coverage-report",
     "build": "tsup --config ./tsup.config.ts",
     "lint": "eslint src/*.ts",
@@ -33,28 +33,30 @@
   "homepage": "https://github.com/danm/image-hash#readme",
   "dependencies": {
     "@cwasm/webp": "^0.1.5",
-    "file-type": "^16.5.3",
-    "jpeg-js": "^0.4.0",
+    "file-type": "^18.5.0",
+    "jpeg-js": "^0.4.4",
     "mocha": "^10.2.0",
-    "pngjs": "^6.0.0"
+    "pngjs": "^7.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.4",
-    "@types/eslint": "^8.4.10",
-    "@types/jest": "^29.2.5",
+    "@types/chai": "^4.3.6",
+    "@types/eslint": "^8.44.2",
+    "@types/jest": "^29.5.4",
     "@types/mocha": "^10.0.1",
     "@types/pngjs": "^6.0.1",
     "@types/request": "^2.48.8",
-    "chai": "^4.3.7",
-    "eslint": "^8.8.0",
+    "chai": "^4.3.8",
+    "eslint": "^8.49.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-plugin-import": "^2.25.4",
-    "jest": "^29.3.1",
-    "ts-jest": "^29.0.3",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "ts-jest-resolver": "^2.0.1",
     "ts-node": "^10.9.1",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.4",
-    "typescript-coverage-report": "^0.7.0"
+    "tsup": "^7.2.0",
+    "typescript": "^5.2.2",
+    "typescript-coverage-report": "^0.8.0",
+    "vitest": "^0.34.4"
   }
 }
