--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "prepare": "npm run build -s",
-    "test": "vitest __tests__/*.test.ts",
+    "test": "vitest run __tests__/*.test.ts",
     "coverage": "npm run test -- --coverage && typescript-coverage-report",
     "build": "tsup --config ./tsup.config.ts",
     "lint": "eslint src/*.ts",
@@ -45,6 +45,7 @@
     "@types/mocha": "^10.0.1",
     "@types/pngjs": "^6.0.1",
     "@types/request": "^2.48.8",
+    "@vitest/coverage-v8": "^0.34.4",
     "chai": "^4.3.8",
     "eslint": "^8.49.0",
     "eslint-config-airbnb-base": "^15.0.0",
