--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,5 +36,7 @@
     "**/.DS_Store": true,
     "**/dist": true,
     "**/.vscode": true
-  }
+  },
+  "autoHide.autoHideSideBar": false,
+  "autoHide.autoHidePanel": false
 }
