--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "image-hash",
-  "version": "5.3.1",
+  "version": "6.0.0",
   "description": "Create a hash from an image",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "test": "npx mocha -r ts-node/register __tests__/*.test.ts ",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "build": "tsc",
     "lint": "eslint src/*.ts",
     "lint:fix": "eslint src/*.ts --fix"
@@ -31,30 +32,24 @@
   "homepage": "https://github.com/danm/image-hash#readme",
   "dependencies": {
     "@cwasm/webp": "^0.1.5",
-    "file-type": "^16.5.3",
+    "file-type": "^21.0.0",
     "jpeg-js": "^0.4.0",
-    "pngjs": "^6.0.0",
-    "request": "^2.81.0"
+    "pngjs": "^7.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-typescript": "^7.1.0",
-    "@babel/runtime": "^7.3.1",
-    "@types/chai": "^4.2.12",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^11.13.8",
-    "chai": "^4.2.0",
-    "eslint": "^8.8.0",
+    "@types/node": "^24.5.2",
+    "@vitest/coverage-v8": "^3.2.4",
+    "eslint": "^9.36.0",
+    "@types/pngjs": "^6.0.1",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-plugin-import": "^2.25.4",
-    "mocha": "^9.0.0",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.3.1",
-    "@types/pngjs": "^6.0.1"
-
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "esbuild": "0.25.0"
+    }
   }
 }
