revert back to commonJS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "module": "es2015",
+        "module": "commonjs",
         "esModuleInterop": true,
         "target": "es2015",
         "noEmitOnError": true,
